# dhybridrpy

./: .pre-commit-config.yaml  README.md  howToRelease.txt  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml  workflow.yml
dhybridrpy/: __init__.py  containers.py  data.py  dhybridrpy.py  main.py
dhybridrpy/Output/Fields/Electric/Total/Intensity/: Efld_00000001.h5  Efld_00000032.h5  Efld_00000064.h5  Efld_00000096.h5  Efld_00000128.h5
dhybridrpy/Output/Fields/Electric/Total/x/: Efld_00000001.h5  Efld_00000032.h5  Efld_00000064.h5  Efld_00000096.h5  Efld_00000128.h5
dhybridrpy/Output/Fields/Electric/Total/y/: Efld_00000001.h5  Efld_00000032.h5  (+3 more)
dhybridrpy/Output/Phase/etx1/Sp01/: dens_sp01_00000001.h5  dens_sp01_00000032.h5  dens_sp01_00000064.h5  dens_sp01_00000096.h5  dens_sp01_00000128.h5
dhybridrpy/Output/Phase/p1x1/Sp01/: dens_sp01_00000001.h5  dens_sp01_00000032.h5  dens_sp01_00000064.h5  dens_sp01_00000096.h5  dens_sp01_00000128.h5
dhybridrpy/Output/Phase/p2x1/Sp01/: dens_sp01_00000001.h5  dens_sp01_00000032.h5  dens_sp01_00000064.h5  dens_sp01_00000096.h5  dens_sp01_00000128.h5
dhybridrpy/Output/Phase/p3x1/Sp01/: dens_sp01_00000001.h5  dens_sp01_00000032.h5  dens_sp01_00000064.h5  dens_sp01_00000096.h5  dens_sp01_00000128.h5
dhybridrpy/Output/Phase/x3x2x1/Sp01/: dens_sp01_00000001.h5  dens_sp01_00000032.h5  dens_sp01_00000064.h5  dens_sp01_00000096.h5  dens_sp01_00000128.h5
examples/: examples.ipynb
examples/data/inputs/: input2
examples/example_data/input/: input  input_tmp  test.nml
tests/: containers_test.py
(+150 files in other folders)
