[project]
name = "dhybridrpy"
version = "1"
description = "Easily plot data from dHybridR."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.12.1",
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "ruff>=0.7.1",
    "h5py",
    "f90nml",
    "pre-commit",
    "dask"
]
license = {file = "LICENSE.txt"}
